Fix Vercel runtime configuration
Use @vercel/python instead of python3.12

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/generate.py": {
-      "runtime": "python3.12"
+    "api/*.py": {
+      "runtime": "@vercel/python"
     }
   }
 }
